--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "PRBF2-Download-Assistant",
-  "version": "1.2.2",
+  "version": "2.0.0",
   "description": "Download tool for PR:BF2",
   "main": "./app/main.js",
   "dependencies": {
     "humanize-duration": "latest",
     "pretty-bytes": "latest",
-    "webtorrent": "^0.108.1"
+    "torrent-stream": "^1.0.2"
   },
   "scripts": {
     "start": "electron .",
